force-app/main/default/objects/Apigee_Auth_Provider__mdt/fields/Auth_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Auth_Provider_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <description>Unique name of the auth provider using this CMT.  This must match the Auth Provider URL Suffix value</description>
    <inlineHelpText>Unique name of the auth provider using this CMT.  This must match the Auth Provider URL Suffix value</inlineHelpText>
    <label>Auth Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>