force-app/main/default/objects/Apigee_Auth_Provider__mdt/fields/Callback_URL__c.field-meta.xml
<CustomField>
    <fullName>Callback_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <description>Auth callback url.  If blank, it will be generated using Auth Provider Name</description>
    <inlineHelpText>Auth callback url.  If blank, it will be generated using Auth Provider Name</inlineHelpText>
    <label>Callback URL</label>
    <type>Url</type>
</CustomField>