force-app/main/default/objects/Apigee_Auth_Provider__mdt/fields/Named_Credential_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_Endpoint__c</fullName>
    <description>Named Credential developer name with username representing Client ID and password containing Client Secret.  Use this instead of Client ID, Client Secret, and Token URL to encrypt and hide the secret.</description>
    <inlineHelpText>Named Credential developer name with username representing Client ID and password containing Client Secret.  Use this instead of Client ID, Client Secret, and Token URL to encrypt and hide the secret.</inlineHelpText>
    <label>Named Credential Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>