force-app/main/default/objects/Apigee_Auth_Provider__mdt/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Apigee scope (optional).  Scope can be left blank in related Named Credential and will not be used.</description>
    <inlineHelpText>Apigee scope (optional).  Scope can be left blank in related Named Credential and will not be used.</inlineHelpText>
    <encryptionScheme>None</encryptionScheme>
    <label>Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>